# blog-pipeline

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: md-lint.yml
agent-templates/: article-drafter.md  article-proposer.md  note-summarizer.md  note-tagger.md  transcript-corrector.md
scripts/: list_materials.py  parse_enex.py
skill-templates/propose-articles/: SKILL.md
skill-templates/structure-note/: SKILL.md
skill-templates/writing-style/: SKILL.md
tests/: test_list_materials.py  test_parse_enex.py
tests/fixtures/: multi-note-sample.enex  sample.enex
