[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-pipeline"
version = "0.1.0"
description = "音声メモ起点のブログ執筆支援パイプライン（汎用スクリプト・Skill ひな形）"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

